# pickleball-serve-detection

./: .gitignore  README.md  pyproject.toml
docs/: serve_annotation_rules.md
notebooks/: serve_detection_training.ipynb
src/pickleball_serve_detection/: __init__.py  audio_proposer.py  cascade.py  coarse_window.py  constants.py  frame_sampler.py  model_names.py  prompts.py  serve_detector.py  serve_events.py  vlm_client.py
tests/: test_audio_proposer.py  test_cascade.py  test_coarse_window_aggregate.py  test_serve_events.py  test_serve_training_parser.py  test_serve_window_sampling.py
